<resources>
    <string name="app_name">Teoria Musical</string>

    <string name="melodia_caracteristicas"><b>MELODIA</b> - conjunto de sons dispostos em ordem sucessiva. É aquilo que pode ser cantado e em uma música pode haver mais de uma melodia ao mesmo tempo (visto de forma horizontal).</string>
    <string name="harmonia_caracteristicas"><b>HARMONIA</b> - conjunto de sons tocados ao mesmo tempo e faz a base da melodia (visto de forma vertical).</string>
    <string name="ritmo_caracteristicas"><b>RITMO</b> - ordem e proporção em que estão dispostos os sons, servindo para a marcação do tempo da música.</string>
    <string name="altura_caracteristicas"><b>ALTURA</b> - determina se o som é grave ou agudo. <b>NÃO CONFUNDA COM VOLUME</b></string>
    <string name="duracao_caracteristicas"><b>DURAÇÃO</b> - é o tempo em que o som soa.</string>
    <string name="intensidade_caracteristicas"><b>INTENSIDADE</b> - é o volume sonoro.</string>
    <string name="timbre_caracteristicas"><b>TIMBRE</b> - é a característica de cada som. Embora diferentes instrumentos (corpos) possam tocar a mesma nota, o som terá diferenças.</string>
    <string name="notas_notas">As notas se dão pela <b>altura</b> do som. Eu sei que é tentador, mas não confunda com volume.</string>
    <string name="notas_do_re"><b>Dó Ré Mi Fá Sol Lá Si</b></string>
    <string name="notas_not_ingl"><b>C D E F G A B</b></string>
    <string name="pauta_pent">A <b>pauta</b> ou <b>pentagrama</b> consiste em cinco linhas e quatro espaços (eu sei que parece um pouco abstrato, por isso olhe a imagem abaixo).</string>
    <string name="pauta_linhas_sup">Para isso existem as <b>linhas suplementares</b>. Veremos mais na próxima página.</string>
    <string name="pauta_linhas_sup_ii">Existem algumas regras para as linhas suplementares que podem ser vistas melhor na imagem abaixo. As regras são:\n<b>1.</b> A largura da linha suplementar deve ser um pouco maior que a cabeça da nota;\n\n<b>2.</b> As linhas suplementares são individuais para cada nota;\n\n<b>3.</b> Não é necessária uma linha suplementar em cima de uma nota caso não haja notas acima dela.</string>

    <string name="clave_sol_curiosidade"><font color="#793D00"><b>Curiosidade</b></font>\n\n<font color="#353739">A palavra \'\'clave\'\' vem do latim e significa \'\'chave\'\'</font></string>
</resources>