<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.moduloI.caracteristicas.TelaCaracteristicasIII"
    android:background="@color/cor_fundo">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:text="Já o som possui as seguintes características: "
        android:textColor="@color/black"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintTop_toBottomOf="@+id/botao_violao_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/altura_caracteristicas"
        android:textColor="@color/black"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/duracao_caracteristicas"
        android:textColor="@color/black"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/intensidade_caracteristicas"
        android:textColor="@color/black"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/timbre_caracteristicas"
        android:textColor="@color/black"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="Os botões abaixo apresentam o acorde de Dó maior em um violão e em um piano. Ouça os dois e veja a diferença."
        android:textColor="@color/black"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_piano"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borda_botao"
        android:text="Dó - Piano"
        android:textAllCaps="false"
        android:textColor="@color/amarelo"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_violao_2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borda_botao"
        android:text="Dó - Violão"
        android:textAllCaps="false"
        android:textColor="@color/amarelo"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_car_avan_iii"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/botao_violao_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAllCaps="false"
        android:textSize="@dimen/tamanho_texto"
        android:text="Finalizar"
        android:textColor="@color/white"
        android:backgroundTint="@color/verde"
        android:background="@drawable/botao_voltar_avancar"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_car_volt_iii"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/botao_piano"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAllCaps="false"
        android:textSize="@dimen/tamanho_texto"
        android:text="Voltar"
        android:textColor="@color/white"
        android:backgroundTint="@color/vermelho"
        android:background="@drawable/botao_voltar_avancar"/>
</androidx.constraintlayout.widget.ConstraintLayout>